# tok_library

./: .gitignore  README.md  pyproject.toml  setup.py
data/tokenizer/: config.json
example_scripts/: example_tokenization_config.yml  example_tokenization_script.py
src/: config.yml  inspect_binary.py  preprocess_data.py
src/tok_library/: preprocess_data.py
src/tok_library/data/tokenizer/: tokenizer.json
test_processed_data/: executor.json
tests/: test_config.yml  test_tokenization_round_trip.py
tests/test_data/: random_row.parquet
tests/test_processed_output/: 00000_unshuffled.ds  00000_unshuffled.ds.index  00000_unshuffled.ds.metadata  executor.json
tests/test_processed_output/stats/: 00000.json
